Tests failing with -XX:+UseNUMA due to "NUMA support disabled" warning

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 25
    • Affects Version/s: 25
    • Component/s: core-libs
    • b06

      A number of tests launch VMs and read the output of the sub-process. The changes in JDK-8205051 mean the warning message "NUMA support disabled: Only a single NUMA node is available" is printed when running the tests -XX:+UseNUMA on system that only have one node, this breaks several tests. So far, the failures are with:

      java/util/logging/LoggingDeadlock2.java
      tools/jar/modularJar/Basic.java
      java/util/zip/EntryCount64k.java
      java/util/concurrent/locks/Lock/TimedAcquireLeak.java

      We either need to fix these tests, question whether the warning for the single node case is useful, or have some probe so that tests can skip when run with UseNUMA on a single node.

            Assignee:
            Swati Sharma
            Reporter:
            Alan Bateman
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: