8346834: Tests failing with -XX:+UseNUMA due to "NUMA support disabled" warning